# linlearn

./: .coveragerc  .travis.yml  LICENSE  README.md  changes.py  corrupt_regression.py  data_loaders.py  essai.py  example_least_squares_solvers.py  exp_sgd_shallow_clip.py  experiment.py  linreg_exp_HD.py  linreg_experiment.py  linreg_realdata.py  linreg_realdata_tables.py  liuliu18.py  liuliu19.py  logistic.ipynb  logitclassif_experiment.py  logitclassif_experiment_tables.py  main_least_squares.py  main_logistic.py  main_logistic_new.py  main_plot_decisions.py  noise_generators.py  pyproject.toml  requirements.txt  run_exp_classif_HD.py  run_hyperopt.py  setup.py  todo.md  truc.py
docs/: api.rst  classification.rst  conf.py  index.rst  solver.rst
examples/: plot_decision_v2.py  plot_decisions.py
linlearn/: __init__.py  _estimator.py  _loss.py  _loss_old.py  _penalty.py  _solver.py  _solver_old.py  _utils.py  learner.py  loss.py  penalty.py  simulation.py  solver.py  strategy.py
linlearn/_solver/: __init__.py  _base.py  _cgd.py  _gd.py  _history.py  _learning_rate.py  _saga.py  _sgd.py  _svrg.py
linlearn/datasets/: __init__.py  _adult.py  _bank.py  _default_cb.py  _kick.py  _upselling.py  dataset.py  loaders.py
linlearn/estimator/: __init__.py  _base.py  ch.py  dkk.py  erm.py  gmom.py  hg.py  llm.py  mom.py  tmean.py
linlearn/learner/: __init__.py  base.py  logistic_regression.py
tests/: test_binary_classifier.py  test_estimator.py  test_history.py  test_learning_rate.py  test_loss.py  test_models.py  test_multiclass.py  test_proxs.py  test_utils.py  utils.py
(+31 files in other folders)
